changed instructor view

--- a/public/view/partials/classesDashboard.html
+++ b/public/view/partials/classesDashboard.html
@@ -4,12 +4,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="center-align">
-    <div ng-if='cc.admin' class="input-field col s6 offset-s1">
-      <input  ng-model=cc.email type="text" id="instructorEmail" value="">
-      <label for="instructorEmail">Instructors email</label>
-    </div>
-    <button ng-if='cc.admin' ng-click="cc.addUser()" class='btn center-align' type="button" name="button">Add Instructor</button>
+  <div class="col s12 center-align">
     <button class="btn" onclick="document.getElementById('addClass').style.display = 'block'">Add Class</button>
   </div>
   <div class="row">
