--- a/public/view/parent.html
+++ b/public/view/parent.html
@@ -34,7 +34,7 @@
       <tr ng-repeat="student in pc.studentArray | orderBy:'firstName'" ng-if="student.checkedIn">
         <td ng-click='pc.checkInStudent(student)'></td>
         <td class="waves-effect waves-light btn"
-         ng-click='pc.checkInStudent(student)'>
+         ng-click='pc.checkOutStudent(student)'>
           {{student.firstName}} {{student.lastName}}
         </td>
         <td ng-show="student.initialized" class="waves-effect waves-teal btn-flat">Review Info</td>
