--- a/public/view/index.html
+++ b/public/view/index.html
@@ -70,7 +70,7 @@
 
         <li class="bold"><a href="#!classes" class="waves-effect waves"><span class="menuItem">Classes Dashboard</span></a></li>
 
-        <li class="bold"><a href="#!stats" class="waves-effect waves"><span class="menuItem">Logistics</span></a></li>
+        <li class="bold"><a href="#!stats" class="waves-effect waves"><span class="menuItem">Statistics</span></a></li>
 
         <li tooltipped ng-show="ic.classSub" class="disabled" data-position="right" data-delay="100" data-tooltip="Please select class from dashboard to view this dropdown">
           <span>Class options</span>
