updated instructor dashboard

--- a/public/view/partials/instructor.html
+++ b/public/view/partials/instructor.html
@@ -15,10 +15,15 @@
     <th>Instructor Name</th>
     <th>Instructor Email</th>
     <th>Phone Number</th>
+    <th>Edit</th>
   </tr>
-  <tr>
-    <th></th>
-    <th></th>
-    <th></th>
+  <tr ng-repeat="user in inc.users">
+    <td>{{user.googleName}}</td>
+    <td>{{user.googleEmail}}</td>
+    <td><input ng-if="inc.edit" class="center-align" type="text" ng-model="user.phone" value=""><span ng-if="inc.notEdit">{{user.phone}}</span</td>
+    <td>
+      <button ng-if="inc.notEdit" ng-click="inc.editB($index)" type="button" class="btn">Edit</button>
+      <button ng-if="inc.edit" ng-click="inc.editB($index)" type="button" class="btn">Save</button>
+    </td>
   </tr>
 </table>
