--- a/public/view/partials/classesDashboard.html
+++ b/public/view/partials/classesDashboard.html
@@ -53,7 +53,7 @@
 <div id="addClass" class="modal">
   <span class="close animate" onclick="document.getElementById('addClass').style.display = 'none'">&times;</span>
   <div class="modal-content animate">
-    <form class="row">
+    <form id="addClassForm"class="row">
       <div class="input-field col l6 s12">
         <i class="material-icons prefix">grade</i>
         <input ng-model='cc.grades' type="text" id="grade" value="">
