--- a/public/view/parentQuestions/5-complete.html
+++ b/public/view/parentQuestions/5-complete.html
@@ -1,4 +1,8 @@
-<div class="" ng-init="pc.completeParentReview()">
-  <h3>Great!  {{pc.currentStudent.firstName}} has been checked in!</h3>
-  <button class="btn" ng-click='pc.go("/parent")' type="button" name="button">yoooooo</button>
+<div class="container">
+  <div class="row">
+    <div class="col s12" ng-init="pc.completeParentReview()">
+      <h3 class="center-align">Great!  {{pc.currentStudent.firstName}} has been checked in!</h3>
+      <button class="btn" ng-click='pc.go("/parent")' type="button" name="button">yoooooo</button>
+    </div>
+  </div>
 </div>
