--- a/public/view/partials/classesDashboard.html
+++ b/public/view/partials/classesDashboard.html
@@ -49,7 +49,7 @@
       </table>
     </div>
   </div>
-<!-- The Modal -->
+<!-- The addClass Modal -->
 <div id="addClass" class="modal">
   <span class="close animate" onclick="document.getElementById('addClass').style.display = 'none'">&times;</span>
   <div class="modal-content animate">
@@ -110,7 +110,7 @@
     </div>
   </div>
 </div>
-
+<!-- The editClass Modal -->
 <div id="editClass" class="modal">
   <span class="close animate" onclick="document.getElementById('editClass').style.display = 'none'">&times;</span>
   <div class="modal-content animate">
@@ -171,13 +171,3 @@
     </div>
   </div>
 </div>
-
-
-
-
-
-
-
-
-
-<!--spacer  -->
