--- a/public/view/parentQuestions/4b-pinPad.html
+++ b/public/view/parentQuestions/4b-pinPad.html
@@ -1,11 +1,9 @@
 <div class="container">
-  <span>PIN is: <input type="password" data-ng-model="pc.pinEntry"></span>
-  <span>Don't show this, but PIN is: <input type="text" data-ng-model="pc.pinEntry"></span>
-  <bc-keypad
-  bc-number-model="pc.pinEntry"
-  bc-max-length="4"
-  bc-left-button="backspace"
-  bc-right-button="submit"
-  bc-right-button-method="pc.enterPin($event, numbers)"
-  ></bc-keypad>
+  <div class="row">
+    <div class="col s12">
+      <span>PIN is: <input type="password" data-ng-model="pc.pinEntry"></span>
+      <span>Don't show this, but PIN is: <input type="text" data-ng-model="pc.pinEntry"></span>
+      <bc-keypad bc-number-model="pc.pinEntry" bc-max-length="4" bc-left-button="backspace" bc-right-button="submit" bc-right-button-method="pc.enterPin($event, numbers)"></bc-keypad>
+    </div>
+  </div>
 </div>
