--- a/public/view/partials/studentDashboard.html
+++ b/public/view/partials/studentDashboard.html
@@ -27,7 +27,7 @@
           <td><button ng-click="sc.deletStudents(x.studentID)" class="btn">Delete</button></td>
         </tr>
       </table>
-
+<!-- addStudent Modal -->
       <div id="addStudent" class="modal">
         <span class="close animate" onclick="document.getElementById('addStudent').style.display = 'none'">&times;</span>
         <div class="modal-content animate">
@@ -60,7 +60,7 @@
           <button class='btn' ng-click='sc.addStudent()' type="button" name="button">Save Student</button>
         </div>
       </div>
-
+<!-- editStudent Modal -->
       <div id="editStudent" class="modal">
         <span class="close animate" onclick="document.getElementById('editStudent').style.display = 'none'">&times;</span>
         <div class="modal-content animate">
@@ -101,12 +101,11 @@
               <p>{{sc.emergencyName}}</p>
               <p>{{sc.emergencyRelation}}</p>
               <p>{{sc.emergencyPhone}}</p>
-
             <button onclick="document.getElementById('showEmergency').style.display = 'none'; document.getElementById('editStudent').style.display = 'block'" class='btn' type="button" name="button">Update Information</button>
           </div>
         </div>
       </div>
-
+<!--end emergency modal  -->
     </div>
   </div>
 </div>
