--- a/public/view/parentQuestions/4a-pinSystem.html
+++ b/public/view/parentQuestions/4a-pinSystem.html
@@ -3,7 +3,25 @@
     WE GOT A PIN ALREADY
   </div>
   <h3>Would you like to use a PIN to check out the student?</h3>
-  <button class="btn" ng-click='pc.usePin(true)' type="button" name="button">Yes</button>
+  <!-- <button class="btn" ng-click='pc.usePin(true)' type="button" name="button">Yes</button>
+  <button class="btn" ng-click='pc.usePin(false)' type="button" name="button">No</button> -->
+  <button class="btn" ng-click='pc.usePin(true)'>Yes</button>
   <button class="btn" ng-click='pc.usePin(false)' type="button" name="button">No</button>
 
+</div>
+
+
+<div id="keypad" class="modal">
+  <div class="modal-content animate">
+    <span>PIN is: <input type="password" data-ng-model="pc.pinEntry"></span>
+    <bc-keypad
+    bc-number-model="pc.pinEntry"
+    bc-max-length="4"
+    bc-left-button="backspace"
+    bc-right-button="submit"
+    bc-right-button-method="pc.enterPin($event, numbers)"
+    ></bc-keypad>
+    <!-- <span class="close animate" onclick="document.getElementById('keypad').style.display = 'none'">&times;</span> -->
+    <button class='btn left' ng-click='pc.keypadClose()' type="button" name="button">Cancel</button>
+  </div>
 </div>
