added a modal that asks for phone number on login

--- a/public/view/partials/classesDashboard.html
+++ b/public/view/partials/classesDashboard.html
@@ -173,3 +173,15 @@
       </div>
     </div>
   </div>
+
+  <div id="addPhoneNumber" class="modal">
+    <div class="modal-content animate center-align">
+      <h3>Please enter a phone number to continue</h3>
+      <div class="input-field">
+        <i class="material-icons prefix">phone</i>
+        <input type="text" ng-model="cc.phone" id="phone" value="">
+        <label for="phone">Phone Number</label>
+        <button class="btn" name="button" ng-click="cc.savePhone()">Save</button>
+      </div>
+    </div>
+  </div>
