--- a/public/styles/_generalStyles.scss
+++ b/public/styles/_generalStyles.scss
@@ -54,7 +54,7 @@ td {
     margin: 5px auto;
     border: 1px solid #888;
     width: 80vw;
-    overflow-y: scroll;
+    overflow-y: hidden;
      -webkit-overflow-scrolling: touch;
      min-height: 10%;
      max-height: 100vh;
