--- a/public/view/partials/instructor.html
+++ b/public/view/partials/instructor.html
@@ -15,15 +15,16 @@
     <th>Instructor Name</th>
     <th>Instructor Email</th>
     <th>Phone Number</th>
-    <th>Edit</th>
+    <th>Edit/Remove</th>
   </tr>
   <tr ng-repeat="user in inc.users">
     <td>{{user.googleName}}</td>
     <td>{{user.googleEmail}}</td>
-    <td><input ng-if="inc.edit" class="center-align" type="text" ng-model="user.phone" value=""><span ng-if="inc.notEdit">{{user.phone}}</span</td>
+    <td><input ng-if="user.edit" class="center-align" type="text" ng-model="user.phone" value=""><p ng-if="user.notEdit">{{user.phone}}</p</td>
     <td>
-      <button ng-if="inc.notEdit" ng-click="inc.editB($index)" type="button" class="btn">Edit</button>
-      <button ng-if="inc.edit" ng-click="inc.save($index)" type="button" class="btn">Save</button>
+      <button ng-if="user.notEdit" ng-click="inc.editB($index)" type="button" class="btn">Edit</button>
+      <button ng-if="user.edit" ng-click="inc.save($index)" type="button" class="btn">Save</button>
+      <button ng-click="inc.deleteInsctructor($index)" type="button" class="btn"><i class="small material-icons">delete</i></button>
     </td>
   </tr>
 </table>
