--- a/public/styles/_inputs.scss
+++ b/public/styles/_inputs.scss
@@ -62,5 +62,10 @@ input:focus+label, textarea:focus+label, .input-field .prefix.active {
 }
 
 .input-field {
-  margin-top: 0rem; 
+  margin-top: 0rem;
+}
+
+.dropdown-content, select-dropdown, active {
+  overflow: scroll;
+  max-height: 30vh !important;
 }
