--- a/public/view/partials/classesDashboard.html
+++ b/public/view/partials/classesDashboard.html
@@ -19,7 +19,9 @@
           <th>End Date</th>
           <th>Time</th>
           <th>Grades</th>
-          <th></th>
+          <th>View Students</th>
+          <th>Edit Class</th>
+          <th>Delete Class</th>
         </tr>
         <tr ng-repeat='x in cc.classesArray '>
           <td><span ng-repeat="instructor in x.instructors">{{instructor.instructor}}{{$last ? '' : ', '}} </span></td>
@@ -36,15 +38,16 @@
             </button>
           </td>
           <td>
-            <button tooltipped class="btn" ng-click="cc.removeClass(x._id)" data-position="top" data-delay="50" data-tooltip="Delete Class">
-              <i class="small material-icons">delete</i>
-            </button>
-          </td>
-          <td>
             <button tooltipped class="btn" ng-click="cc.editClass($index)" data-position="top" data-delay="50" data-tooltip="Edit Class">
               <i class="small material-icons">create</i>
             </button>
           </td>
+          <td>
+            <button tooltipped class="btn" ng-click="cc.removeClass(x._id)" data-position="top" data-delay="50" data-tooltip="Delete Class">
+              <i class="small material-icons">delete</i>
+            </button>
+          </td>
+
         </tr>
       </table>
     </div>
