--- a/public/view/index.html
+++ b/public/view/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="/public/vendors/materialize.clockpicker.css">
   <link rel="stylesheet" href="/public/vendors/angular-keypad.min.css">
   <link rel="stylesheet" href="/public/vendors/xeditable.min.css">
+  <link rel="stylesheet" href="/public/vendors/sweetalert2.min.css">
   <link rel="stylesheet" href="/public/styles/main.min.css">
 
   <!-- Vendors -->
@@ -23,6 +24,8 @@
   <script src="/public/vendors/materialize.clockpicker.js" charset="utf-8"></script>
   <script src="/public/vendors/angular-keypad.min.js"></script>
   <script src="/public/vendors/xeditable.min.js"></script>
+  <script src="/public/vendors/sweetalert2.min.js" charset="utf-8"></script>
+
 
 
   <!-- Ng-App -->
