phone number filter and directives

--- a/public/styles/_generalStyles.scss
+++ b/public/styles/_generalStyles.scss
@@ -83,6 +83,10 @@ td {
     to {transform: scale(1)}
 }
 
+#phoneNumberModal{
+  width: 40vw;
+}
+
 /* button styling */
 .btn {
   background-color: $buttonColor !important;
