--- a/public/view/partials/classesDashboard.html
+++ b/public/view/partials/classesDashboard.html
@@ -178,11 +178,11 @@
   </div>
 
   <div id="addPhoneNumber" class="modal">
-    <div class="modal-content animate center-align">
+    <div id="phoneNumberModal" class="modal-content animate center-align">
       <h3>Please enter a phone number to continue</h3>
       <div class="input-field">
         <i class="material-icons prefix">phone</i>
-        <input type="text" ng-model="cc.phone" id="phone" value="">
+        <input phone-input ng-model="cc.phone"type="text" id="phone" name="phone">
         <label for="phone">Phone Number</label>
         <button class="btn" name="button" ng-click="cc.savePhone()">Save</button>
       </div>
