--- a/public/view/partials/studentDashboard.html
+++ b/public/view/partials/studentDashboard.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col s12">
       <h4 class="center-align">Class Subject: {{sc.currentClass.subject}}</h4>
-      <h5 class='center-align'>{{ sc.currentClass.location }}</h5>
+      <h5 class='center-align'>Location: {{ sc.currentClass.location }}</h5>
       <h5 class='center-align'>Date: {{sc.currentClass.startDate | date}} - {{sc.currentClass.endDate | date}}</h5>
       <button class="btn"ng-click="sc.goToParent()">Check-in View</button>
       <button class="btn" onclick="document.getElementById('addStudent').style.display = 'block'">Add Student</button>
@@ -22,8 +22,12 @@
           <td>{{ x.firstName }} {{ x.lastName }}</td>
           <td>{{ x.grade }}</td>
           <td><button ng-click="sc.viewEmergency(x.studentID)" onclick="document.getElementById('showEmergency').style.display = 'block'" class="btn">View Emergency Contact</button></td>
-          <td><button ng-click="sc.setId(x)" class="btn" onclick="document.getElementById('editStudent').style.display = 'block'">Edit</button></td>
-          <td><button ng-click="sc.deletStudents(x.studentID)" class="btn">Delete</button></td>
+          <td><button ng-click="sc.setId(x)" class="btn" onclick="document.getElementById('editStudent').style.display = 'block'">
+            <i class="small material-icons">create</i>
+          </button></td>
+          <td><button ng-click="sc.deletStudents(x.studentID)" class="btn">
+            <i class="small material-icons">delete</i>
+          </button></td>
         </tr>
       </table>
 <!-- addStudent Modal -->
@@ -55,7 +59,7 @@
             </div>
             <div class="input-field">
               <i class="material-icons prefix">contact_phone</i>
-              <input ng-model='sc.emergencyPhone' type="text" id='phone' name="" value="">
+              <input phone-input ng-model='sc.emergencyPhone' type="text" id='phone' name="phone" value="">
               <label for="phone">Phone</label>
             </div>
             <div class="input-field">
@@ -96,7 +100,7 @@
              </div>
             <div class="input-field">
               <i class="material-icons prefix">contact_phone</i>
-              <input ng-model='sc.emergencyPhoneUp' type="text" id='phoneE' name="" value="">
+              <input phone-input ng-model='sc.emergencyPhoneUp' type="text" id='phoneE' name="phone" value="" >
               <label for="phoneE">Phone</label>
             </div>
             <div class="input-field">
@@ -115,7 +119,7 @@
               <h3>{{sc.studentName}}</h3>
               <p>{{sc.emergencyName}}</p>
               <p>{{sc.emergencyRelation}}</p>
-              <p>{{sc.emergencyPhone}}</p>
+              <p>{{sc.emergencyPhone | tel}}</p>
             <button onclick="document.getElementById('showEmergency').style.display = 'none'; document.getElementById('editStudent').style.display = 'block'" class='btn' type="button" name="button">Update Information</button>
           </div>
         </div>
