--- a/public/view/partials/studentDashboard.html
+++ b/public/view/partials/studentDashboard.html
@@ -27,7 +27,7 @@
           <td>{{ x.grade }}</td>
           <td><button ng-click="sc.viewEmergency(x.studentID)" onclick="document.getElementById('showEmergency').style.display = 'block'" class="btn">View Emergency Contact</button></td>
           <td><button ng-click="sc.setId(x)" class="btn" onclick="document.getElementById('editStudent').style.display = 'block'">Edit</button></td>
-          <td><button ng-click="sc.deletStudents(x.studentID)" class="btn">Delete</button></td>
+          <td><button ng-click="sc.deleteStudents(x.studentID)" class="btn">Delete</button></td>
         </tr>
       </table>
 <!-- addStudent Modal -->
