--- a/public/view/parent.html
+++ b/public/view/parent.html
@@ -11,7 +11,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr class="parentTR" ng-repeat="student in pc.studentArray | orderBy:'firstName'" ng-if="!student.checkedIn">
+        <tr class="parentTR" ng-repeat="student in pc.studentArray | orderBy:'firstName'" ng-if="student.checkedIn == 'false'">
           <td class="parentTD" ng-click='pc.checkInStudent(student)'>
             <i class="material-icons">check_box_outline_blank</i>
           </td>
@@ -35,7 +35,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr class="parentTR" ng-repeat="student in pc.studentArray | orderBy:'firstName'" ng-if="student.checkedIn">
+        <tr class="parentTR" ng-repeat="student in pc.studentArray | orderBy:'firstName'" ng-if="student.checkedIn == true">
           <td class="parentTD" ng-click='pc.checkOutStudent(student)'>
             <i class="material-icons">check_box</i>
           </td>
