--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -12,4 +12,5 @@ $pickerText: #B3E5FC;
 @import 'navigation';
 @import 'login';
 @import 'generalStyles';
-@import 'inputs'
+@import 'inputs';
+@import 'studentsDash';
