--- a/public/view/partials/studentDashboard.html
+++ b/public/view/partials/studentDashboard.html
@@ -4,132 +4,139 @@
       <h4 class="center-align">Class Subject: {{sc.currentClass.subject}}</h4>
       <h5 class='center-align'>Location: {{ sc.currentClass.location }}</h5>
       <h5 class='center-align'>Date: {{sc.currentClass.startDate | date}} - {{sc.currentClass.endDate | date}}</h5>
-      <button class="btn"ng-click="sc.goToParent()">Check-in View</button>
       <!-- <button class="btn" onclick="document.getElementById('addStudent').style.display = 'block'">Add Student</button> -->
-      <button tooltipped class="btn" onclick="document.getElementById('addStudent').style.display = 'block'"
-      data-position="top" data-delay="50" data-tooltip="Add Student to this Class">
-        <i class="small material-icons">person_add</i>
-      </button>
-      </div>
-  </div>
-  <div class="row">
-    <div class="col s12">
-      <table>
-        <tr>
-          <th>Name</th>
-          <th>Grade</th>
-          <th>Emergency Contact</th>
-          <th>Edit</th>
-          <th>Delete</th>
-        </tr>
-        <tr ng-repeat='x in sc.studentsArray '>
-          <td>{{ x.firstName }} {{ x.lastName }}</td>
-          <td>{{ x.grade }}</td>
-          <td><button ng-click="sc.viewEmergency(x.studentID)" onclick="document.getElementById('showEmergency').style.display = 'block'" class="btn">View Emergency Contact</button></td>
 
-          <td><button ng-click="sc.setId(x)" class="btn" onclick="document.getElementById('editStudent').style.display = 'block'">
-            <i class="small material-icons">create</i>
-          </button></td>
-          <td><button ng-click="sc.deletStudents(x.studentID)" class="btn">
-            <i class="small material-icons">delete</i>
-          </button></td>
-        </tr>
-      </table>
-<!-- addStudent Modal -->
-      <div id="addStudent" class="modal">
-        <span class="close animate" onclick="document.getElementById('addStudent').style.display = 'none'">&times;</span>
-        <div class="modal-content animate">
-          <form ng-submit='sc.addStudent()' id="addStudentForm" action="index.html" method="post">
-            <div class="input-field">
-              <i class="material-icons prefix">account_circle</i>
-              <input ng-model='sc.firstName' type="text" id='firstName' name="" value="">
-              <label for="firstName">First Name</label>
-            </div>
-            <div class="input-field">
-              <i class="material-icons prefix">account_circle</i>
-              <input ng-model='sc.lastName' type="text" id='lastName' name="" value="">
-              <label for="lastName">Last Name</label>
-            </div>
-            <div class='input-field' input-field>
-              <i class="material-icons prefix">grade</i>
-              <select class="" ng-model="sc.grade" material-select watch>
-                <option value="" disabled selected style="display: none;">Grade</option>
-                <option ng-repeat='grades in sc.gradesRange'>{{grades}}</option>
-              </select>
-            </div>
-            <div class="input-field">
-              <i class="material-icons prefix">contacts</i>
-              <input ng-model='sc.emergencyName' type="text" id='emergencyName' name="" value="">
-              <label for="emergencyName">Emergency Contact</label>
-            </div>
-            <div class="input-field">
-              <i class="material-icons prefix">contact_phone</i>
-              <input phone-input ng-model='sc.emergencyPhone' type="text" id='phone' name="phone" value="">
-              <label for="phone">Phone</label>
-            </div>
-            <div class="input-field">
-              <i class="material-icons prefix">people</i>
-              <input ng-model='sc.emergencyRelation' type="text" id='emergencyRelation' name="" value="">
-              <label for="emergencyRelation">Emergency Relation</label>
-            </div>
-          </form>
-          <button class='btn' ng-click='sc.addStudent()' type="button" name="button">Save Student</button>
-        </div>
-      </div>
-<!-- editStudent Modal -->
-      <div id="editStudent" class="modal">
-        <span class="close animate" onclick="document.getElementById('editStudent').style.display = 'none'">&times;</span>
-        <div class="modal-content animate">
-          <form ng-submit='sc.editStudent()' class="" action="index.html" method="post">
-            <div class="input-field" input-field>
-              <i class="material-icons prefix">account_circle</i>
-              <input ng-model='sc.firstNameUp' type="text" id='firstNameUp' name="" value="">
-              <label for="firstNameUp">First Name</label>
-            </div>
-            <div class="input-field">
-              <i class="material-icons prefix">account_circle</i>
-              <input ng-model='sc.lastNameUp' type="text" id='lastNameE' name="" value="">
-              <label for="lastNameE">Last Name</label>
-            </div>
-            <div class='input-field' input-field>
-              <i class="material-icons prefix">grade</i>
-              <select class="" ng-model="sc.gradeUp" material-select watch>
-                <option value="" disabled selected style="display: none;">Grade</option>
-                <option ng-repeat='grades in sc.gradesRange'>{{grades}}</option>
-              </select>
-            </div>
-            <div class="input-field">
-              <i class="material-icons prefix">contacts</i>
-              <input ng-model='sc.emergencyNameUp' type="text" id='contactE' name="" value="">
-              <label for="contactE">Emergency Contact</label>
-             </div>
-            <div class="input-field">
-              <i class="material-icons prefix">contact_phone</i>
-              <input phone-input ng-model='sc.emergencyPhoneUp' type="text" id='phoneE' name="phone" value="" >
-              <label for="phoneE">Phone</label>
-            </div>
-            <div class="input-field">
-              <i class="material-icons prefix">people</i>
-              <input ng-model='sc.emergencyRelationUp' type="text" id='emergencyRelationE' name="" value="">
-              <label for="emergencyRelationE">Emergency Relation</label>
-            </div>
-          </form>
-          <button class='btn' ng-click='sc.editStudent()' type="button" name="button">Save Edits</button>
-        </div>
-      </div>
-<!--show emergency modal  -->
-      <div id="showEmergency" class='modal'>
-        <div class="modal-content animate">
-          <div class="display">
-              <h3>{{sc.studentName}}</h3>
-              <p>{{sc.emergencyName}}</p>
-              <p>{{sc.emergencyRelation}}</p>
-              <p>{{sc.emergencyPhone | tel}}</p>
-            <button onclick="document.getElementById('showEmergency').style.display = 'none'; document.getElementById('editStudent').style.display = 'block'" class='btn' type="button" name="button">Update Information</button>
-          </div>
-        </div>
-      </div>
-<!--end emergency modal  -->
     </div>
   </div>
+  <div class="row">
+    <button class="btn"ng-click="sc.goToParent()">Check-in View</button>
+    <button tooltipped class="btn" onclick="document.getElementById('addStudent').style.display = 'block'"
+    data-position="top" data-delay="50" data-tooltip="Add Student to this Class">
+    <i class="small material-icons">person_add</i>
+  </button>
+  <div class="col s12">
+    <table>
+      <tr>
+        <th>Name</th>
+        <th>Grade</th>
+        <th>Emergency Contact</th>
+        <th>Edit</th>
+        <th>Delete</th>
+      </tr>
+      <tr ng-repeat='x in sc.studentsArray '>
+        <td>{{ x.firstName }} {{ x.lastName }}</td>
+        <td>{{ x.grade }}</td>
+        <td><button ng-click="sc.viewEmergency(x.studentID)" onclick="document.getElementById('showEmergency').style.display = 'block'" class="btn">View Emergency Contact</button></td>
+
+        <td><button ng-click="sc.setId(x)" class="btn" onclick="document.getElementById('editStudent').style.display = 'block'">
+          <i class="small material-icons">create</i>
+        </button></td>
+        <td><button ng-click="sc.deletStudents(x.studentID)" class="btn">
+          <i class="small material-icons">delete</i>
+        </button></td>
+      </tr>
+    </table>
+    <!-- addStudent Modal -->
+    <div id="addStudent" class="modal">
+      <span class="close animate" onclick="document.getElementById('addStudent').style.display = 'none'">&times;</span>
+      <div class="modal-content animate">
+        <form ng-submit='sc.addStudent()' id="addStudentForm" action="index.html" method="post">
+          <div class="input-field">
+            <i class="material-icons prefix">account_circle</i>
+            <input ng-model='sc.firstName' type="text" id='firstName' name="" value="">
+            <label for="firstName">First Name</label>
+          </div>
+          <div class="input-field">
+            <i class="material-icons prefix">account_circle</i>
+            <input ng-model='sc.lastName' type="text" id='lastName' name="" value="">
+            <label for="lastName">Last Name</label>
+          </div>
+          <div class='input-field' input-field>
+            <i class="material-icons prefix">grade</i>
+            <select class="" ng-model="sc.grade" material-select watch>
+              <option value="" disabled selected style="display: none;">Grade</option>
+              <option ng-repeat='grades in sc.gradesRange'>{{grades}}</option>
+            </select>
+          </div>
+          <div class="input-field">
+            <i class="material-icons prefix">contacts</i>
+            <input ng-model='sc.emergencyName' type="text" id='emergencyName' name="" value="">
+            <label for="emergencyName">Emergency Contact</label>
+          </div>
+          <div class="input-field">
+            <i class="material-icons prefix">contact_phone</i>
+            <input phone-input ng-model='sc.emergencyPhone' type="text" id='phone' name="phone" value="">
+            <label for="phone">Phone</label>
+          </div>
+          <div class="input-field">
+            <i class="material-icons prefix">people</i>
+            <input ng-model='sc.emergencyRelation' type="text" id='emergencyRelation' name="" value="">
+            <label for="emergencyRelation">Emergency Relation</label>
+          </div>
+        </form>
+        <!-- <button class='btn' ng-click='sc.addStudent()' type="button" name="button">Save Student</button> -->
+        <div class="input-field col s4">
+          <a class="waves-effect waves-light btn" ng-click='sc.addStudent()' message="Student Saved" duration="1000" toast='click'>Save Student</a>
+        </div>
+      </div>
+    </div>
+    <!-- editStudent Modal -->
+    <div id="editStudent" class="modal">
+      <span class="close animate" onclick="document.getElementById('editStudent').style.display = 'none'">&times;</span>
+      <div class="modal-content animate">
+        <form ng-submit='sc.editStudent()' class="" action="index.html" method="post">
+          <div class="input-field" input-field>
+            <i class="material-icons prefix">account_circle</i>
+            <input ng-model='sc.firstNameUp' type="text" id='firstNameUp' name="" value="">
+            <label for="firstNameUp">First Name</label>
+          </div>
+          <div class="input-field">
+            <i class="material-icons prefix">account_circle</i>
+            <input ng-model='sc.lastNameUp' type="text" id='lastNameE' name="" value="">
+            <label for="lastNameE">Last Name</label>
+          </div>
+          <div class='input-field' input-field>
+            <i class="material-icons prefix">grade</i>
+            <select class="" ng-model="sc.gradeUp" material-select watch>
+              <option value="" disabled selected style="display: none;">Grade</option>
+              <option ng-repeat='grades in sc.gradesRange'>{{grades}}</option>
+            </select>
+          </div>
+          <div class="input-field">
+            <i class="material-icons prefix">contacts</i>
+            <input ng-model='sc.emergencyNameUp' type="text" id='contactE' name="" value="">
+            <label for="contactE">Emergency Contact</label>
+          </div>
+          <div class="input-field">
+            <i class="material-icons prefix">contact_phone</i>
+            <input phone-input ng-model='sc.emergencyPhoneUp' type="text" id='phoneE' name="phone" value="" >
+            <label for="phoneE">Phone</label>
+          </div>
+          <div class="input-field">
+            <i class="material-icons prefix">people</i>
+            <input ng-model='sc.emergencyRelationUp' type="text" id='emergencyRelationE' name="" value="">
+            <label for="emergencyRelationE">Emergency Relation</label>
+          </div>
+        </form>
+        <!-- <button class='btn' ng-click='sc.editStudent()' type="button" name="button">Save Edits</button> -->
+        <div class="input-field col s4">
+          <a class="waves-effect waves-light btn" ng-click='sc.editStudent()' message="Student Edited" duration="1000" toast='click'>Save Edit</a>
+        </div>
+      </div>
+    </div>
+    <!--show emergency modal  -->
+    <div id="showEmergency" class='modal'>
+      <div class="modal-content animate">
+        <div class="display">
+          <h3>{{sc.studentName}}</h3>
+          <p>{{sc.emergencyName}}</p>
+          <p>{{sc.emergencyRelation}}</p>
+          <p>{{sc.emergencyPhone | tel}}</p>
+          <button onclick="document.getElementById('showEmergency').style.display = 'none'; document.getElementById('editStudent').style.display = 'block'" class='btn' type="button" name="button">Update Information</button>
+        </div>
+      </div>
+    </div>
+    <!--end emergency modal  -->
+  </div>
+</div>
 </div>
