--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -4,6 +4,7 @@ $sideNavColor: #4fc3f7;
 $navCollapse: #2196f3;
 $inputColor:  #2196f3;
 $buttonColor: #2196f3;
+$cancelButtonColor: #f44336;
 $monthPickerTop: #2196f3;
 $pickerBody: #03A9F4;
 $pickerText: #B3E5FC;
