--- a/public/view/parent.html
+++ b/public/view/parent.html
@@ -59,16 +59,17 @@
 </div>
 
 <div id="keypad" class="modal">
-  <div class="modal-content animate">
-    <span>PIN is: <input type="password" data-ng-model="pc.pinEntry"></span>
-    <bc-keypad
-    bc-number-model="pc.pinEntry"
-    bc-max-length="4"
-    bc-left-button="backspace"
-    bc-right-button="submit"
-    bc-right-button-method="pc.enterCheckoutPin($event, numbers)"
-    ></bc-keypad>
-    <!-- <span class="close animate" onclick="document.getElementById('keypad').style.display = 'none'">&times;</span> -->
-    <button class='btn left' ng-click='pc.keypadClose()' type="button" name="button">Cancel</button>
+  <div class="modal-container">
+    <button class='btn-floating btn left cancel close' ng-click='pc.keypadClose()' type="button" name="button"><i class="material-icons large">cancel</i></button>
+    <div id="phoneNumberModal" class="modal-content animate">
+      <span>PIN is: <input type="password" data-ng-model="pc.pinEntry"></span>
+      <bc-keypad
+      bc-number-model="pc.pinEntry"
+      bc-max-length="4"
+      bc-left-button="backspace"
+      bc-right-button="submit"
+      bc-right-button-method="pc.enterCheckoutPin($event, numbers)"
+      ></bc-keypad>
+    </div>
   </div>
 </div>
