--- a/public/view/partials/instructor.html
+++ b/public/view/partials/instructor.html
@@ -1,7 +1,7 @@
 <div class="row" ng-init="inc.getInstructors()">
   <div class="center-align">
     <div ng-if='inc.admin' class="input-field col s5 offset-s2">
-      <input  ng-model=inc.email type="text" id="instructorEmail" value="">
+      <input  ng-model=inc.email type="email" id="instructorEmail" value="">
       <label for="instructorEmail">Instructors email</label>
     </div>
     <div class="col s3 center-align">
