--- a/public/view/partials/studentDashboard.html
+++ b/public/view/partials/studentDashboard.html
@@ -13,17 +13,25 @@
     <button tooltipped class="btn" onclick="document.getElementById('addStudent').style.display = 'block'"
     data-position="top" data-delay="50" data-tooltip="Add Student to this Class">
     <i class="small material-icons">person_add</i>
-  </button>
+    </button>
+    <button class='btn' ng-click='sc.checkoutAllStudents(sc.studentsArray)' type="button" name="button">Check-out no PIN</button>
+    <button class='btn' ng-click='sc.forceCheckout(sc.studentsArray)' type="button" name="button">Check-out All Students</button>
+
   <div class="col s12">
     <table>
       <tr>
+        <th>Status<th>
         <th>Name</th>
         <th>Grade</th>
         <th>Emergency Contact</th>
         <th>Edit</th>
         <th>Delete</th>
       </tr>
-      <tr ng-repeat='x in sc.studentsArray '>
+      <tr ng-repeat='x in sc.studentsArray'>
+        <td>
+          <span ng-if="x.checkedIn == 'false'">OUT</span>
+          <span ng-if="x.checkedIn == true">IN</span>
+        </td>
         <td>{{ x.firstName }} {{ x.lastName }}</td>
         <td>{{ x.grade }}</td>
         <td><button ng-click="sc.viewEmergency(x.studentID)" onclick="document.getElementById('showEmergency').style.display = 'block'" class="btn">View Emergency Contact</button></td>
