--- a/public/view/parentQuestions/2-selfCheckout.html
+++ b/public/view/parentQuestions/2-selfCheckout.html
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row">
-    <div class="col s12">
-      <h3 class='center-align'>Will your child be checking themselves out?</h3>
-      <button class="btn" ng-click='pc.selfCheckout(true)' type="button" name="button">Yes</button>
-      <button class="btn" ng-click='pc.selfCheckout(false)' type="button" name="button">No</button>
+    <div class="col s12 center-align">
+      <h3>Will your child be checking themselves out?</h3>
+      <a class="parentBtn" href ng-click='pc.selfCheckout(true)' type="button" name="button"><span>yes</span></a>
+      <a class="parentBtn" href ng-click='pc.selfCheckout(false)' type="button" name="button"><span>no</span></a>
     </div>
   </div>
 </div>
