--- a/public/view/parentQuestions/checkoutError.html
+++ b/public/view/parentQuestions/checkoutError.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col s12">
+    <div class="col s12 center-align">
       <h1>Please speak with an instructor</h1>
     </div>
   </div>
