--- a/public/view/parentQuestions/3-receiveTexts.html
+++ b/public/view/parentQuestions/3-receiveTexts.html
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="row">
-    <div class="col s12">
-      <h3 class='center-align'>Would you like to receive texts when your child has been checked out?</h3>
-      <button class="btn" ng-click='pc.receiveTexts(true)' type="button" name="button">Yes, text</button>
-      <button class="btn" ng-click='pc.receiveTexts(true)' type="button" name="button">Yes, emails</button>
-      <button class="btn" ng-click='pc.receiveTexts(false)' type="button" name="button">No</button>
+    <div class="col s12 center-align">
+      <h3>Would you like to receive texts when your child has been checked out?</h3>
+      <a class="parentBtn" href ng-click='pc.receiveTexts(true)' type="button" name="button"><span>Yes, text</span></a>
+      <a class="parentBtn" href ng-click='pc.receiveTexts(true)' type="button" name="button"><span>Yes, emails</span></a>
+      <a class="parentBtn" href ng-click='pc.receiveTexts(false)' type="button" name="button"><span>No</span></a>
     </div>
   </div>
 </div>
